# cs_442_542_fa23

./: LICENSE  README.md  timer.h
MPI/: all_to_all.cpp  datatypes.cpp  debugging.cpp  hello_world.cpp  mpi_communicator.c  mpi_io.cpp  point_to_point.cpp
MPI/profiles/: events.0.edf  events.1.edf  events.2.edf  events.3.edf  events.4.edf  events.5.edf  events.6.edf  events.7.edf  profile.0.0.0  profile.1.0.0  profile.2.0.0  profile.3.0.0  profile.4.0.0  profile.5.0.0  profile.6.0.0  profile.7.0.0  tautrace.0.0.0.trc  tautrace.1.0.0.trc  tautrace.2.0.0.trc  tautrace.3.0.0.trc  tautrace.4.0.0.trc  tautrace.5.0.0.trc  tautrace.6.0.0.trc  tautrace.7.0.0.trc
cuda/: hello_world.cu  matmat.cu  vecadd.cu
cuda/mpi_matmat/: CMakeLists.txt
cuda/mpi_matmat/examples/: CMakeLists.txt  time_mpi_matmat.cpp
cuda/mpi_matmat/src/: CMakeLists.txt  cuda_cannon.cu  mpi_cannon.cpp  mpi_cannon.hpp  utils.cu
cuda/mpi_matmat/src/tests/: CMakeLists.txt  test_cannon.cpp
cuda/mpi_matmat/xena_tests/: runscript
mpi_plus_x/: hello_world.cpp  matmat_funneled.c  matmat_funneled_task.c  matmat_mpi.c  matmat_serialized.c  matmat_single.c  mpi_omp_task.c  mpism.cpp  shared_mem.cpp
mpipy/: .example.py.swp  .point_to_point.py.swp  .test.py.swp  hello_world.py  point_to_point.py  scatter_difftypes.py  test.py
openmp/: omp_offload.c
pthreads/: threaded_min.c
